--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.buttonOn#mas, .buttonOn#menos, .buttonOn#por, .buttonOn#dividir{
+    background-color: rgb(61, 120, 196);
+}
+
+
 body{
     font-family: monospace;
 }
